- Fix high contrast theme SOHO-6396

--- a/sass/high-contrast-theme.scss
+++ b/sass/high-contrast-theme.scss
@@ -155,7 +155,7 @@ $btn-focus-bg-color: $primary-color;
 $btn-focus-border-color: $primary-color;
 $btn-active-bg-color: $graphite05;
 $btn-disabled-bg-color: $graphite07;
-$btn-disabled-color: $graphite07;
+$btn-disabled-color: $white;
 $btn-disabled-border-color: $graphite07;
 $btn-disabled-opacity: .5;
 
